<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/et_user"
            android:hint="@string/hint_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:id="@+id/et_mail"
            android:hint="@string/hint_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:maxLines="1"
            android:inputType="number"
            android:id="@+id/et_phone"
            android:hint="@string/hint_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_choice"/>

    <Spinner
        android:padding="16dp"
        android:id="@+id/spinner_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/course_array"/>

</LinearLayout>